--- a/_posts/2018-11-15-C++11.md
+++ b/_posts/2018-11-15-C++11.md
@@ -62,7 +62,15 @@ int main()
 ***代码VS2015下编译通过***
 
 输出结果如下：
+
+
+
+
 ![](http://jiephe.oss-cn-beijing.aliyuncs.com/18-11-15/58397569.jpg)
+
+
+
+
 可以看到atomic实现了多线程之间的互斥访问。
 
 
@@ -76,13 +84,12 @@ int main()
 通过Lambda表达可以把this指针直接传过去，回调函数不用定义成static。
 
 ## std::shared_ptr
-智能指针
-用法std::shared_ptr<class_type>
-以std::thread为例 用法有以下几种
-####第一种 先定义再初始化
+用法std::shared_ptr<class_type>，以std::thread为例 用法有以下几种
+
+*第一种 先定义再初始化
 std::shared_ptr<std::thread> td;
 td.reset(new thread());
-####第二种 通过赋值
+*第二种 通过赋值
 std::shared_ptr<std::thread> td;
 auto td1 = std::make_shared<std::thread>;
 td = td1
@@ -90,6 +97,6 @@ td = td1
 通过td.get()获取std::thread的指针值
 
 ## std::mutex std::condition_variable std::unique_lock<std::mutex>
-可以通过这几个类型实现一个blockingqueue(阻塞队列)
+可以通过这几个类型实现一个blockingqueue(阻塞队列) 代码在下面
 
-*所有代码都可以在[c11](https://github.com/jiephe/c11)这里获取
+**所有代码都可以在[c11](https://github.com/jiephe/c11)这里获取**
