--- a/_posts/2018-11-15-C++11.md
+++ b/_posts/2018-11-15-C++11.md
@@ -84,16 +84,25 @@ int main()
 通过Lambda表达可以把this指针直接传过去，回调函数不用定义成static。
 
 ## std::shared_ptr
+
 用法std::shared_ptr<class_type>，以std::thread为例 用法有以下几种
 
-*第一种 先定义再初始化
+###第一种 先定义再初始化
+~~~
 std::shared_ptr<std::thread> td;
 td.reset(new thread());
-*第二种 通过赋值
+~~~
+###第二种 通过赋值
+~~~
 std::shared_ptr<std::thread> td;
 auto td1 = std::make_shared<std::thread>;
 td = td1
+~~~
 通过td.use_count()追踪当前的引用值
+
+
+
+
 通过td.get()获取std::thread的指针值
 
 ## std::mutex std::condition_variable std::unique_lock<std::mutex>
