--- a/_posts/2018-11-15-C++11.md
+++ b/_posts/2018-11-15-C++11.md
@@ -87,25 +87,24 @@ int main()
 
 用法std::shared_ptr<class_type>，以std::thread为例 用法有以下几种
 
-### 第一种 先定义再初始化
+#### 第一种 先定义再初始化
 ~~~
 std::shared_ptr<std::thread> td;
 td.reset(new thread());
 ~~~
-### 第二种 通过赋值
+#### 第二种 通过赋值
 ~~~
 std::shared_ptr<std::thread> td;
 auto td1 = std::make_shared<std::thread>;
 td = td1
+//获取引用值
+int a = td.use_count();
+int b =
+//获取指针值
+std::thread* pThread = m_new_thread_.get();
 ~~~
-通过td.use_count()追踪当前的引用值
 
-
-
-
-通过td.get()获取std::thread的指针值
-
-## std::mutex std::condition_variable std::unique_lock<std::mutex>
+## std::mutex  std::condition_variable  std::unique_lock<std::mutex>
 可以通过这几个类型实现一个blockingqueue(阻塞队列) 代码在下面
 
 **所有代码都可以在[c11](https://github.com/jiephe/c11)这里获取**
