--- a/_posts/2018-11-15-C++11.md
+++ b/_posts/2018-11-15-C++11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "C++11某些特性"
+title:  "C++11特性"
 date:   2018-11-15 16:38:48
 categories: C++
 tags: C++
@@ -99,7 +99,7 @@ auto td1 = std::make_shared<std::thread>;
 td = td1
 //获取引用值
 int a = td.use_count();
-int b =
+int b = td.use_count();
 //获取指针值
 std::thread* pThread = m_new_thread_.get();
 ~~~
